--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'java'
+    id "org.springframework.boot" version "2.6.5"
 }
 
 java {
     sourceCompatibility = "17"
     targetCompatibility = "17"
 }
+
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.virtuslab.internship'
 version '1.0'
@@ -17,6 +20,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.5'
+    implementation 'org.apache.commons:commons-lang3:3.0'
 }
 
 test {
